--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="overlay">
     <div class="menu">
       <h4>Consejo: Utiliza siempre el celular de costado, recarga la página cuando lo hagas.</h4>
+      <h4>En caso de no funcionar, activa "Sitio para computadores" en las opciones del navegador</h4>
       <h2>Modo de juego</h2>
 
       <button onclick="iniciarJuego('bot')">Contra el Bot</button>
